hphp/test/slow/parser/php-reserved-name-num-2.php.expectf
Fatal error: Cannot use 'HH\Num' as class name as it is reserved in %s on line 4
